--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".IncomeRecorder"></activity>
         <activity android:name=".ExpenditureRecorder"></activity>
         <activity android:name=".ReportGenerator"></activity>
+        <activity android:name=".ReportEditor"></activity>
     </application>
 
 </manifest>
