#To add new query and add editor for income#

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ExpenditureRecorder"></activity>
         <activity android:name=".ReportGenerator"></activity>
         <activity android:name=".ReportEditor"></activity>
+        <activity android:name=".IncomeEditor"></activity>
     </application>
 
 </manifest>
