--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
         </activity>
         <activity android:name=".IncomeRecorder"></activity>
         <activity android:name=".ExpenditureRecorder"></activity>
-        <activity android:name=".ReportEditor"></activity>
-        <activity android:name=".IncomeEditor"></activity>
+        <activity android:name=".RecordList"></activity>
+        <activity android:name=".RecordEditor"></activity>
     </application>
 
 </manifest>
